--- a/hollysome/Resources/Login.storyboard
+++ b/hollysome/Resources/Login.storyboard
@@ -1850,13 +1850,13 @@
                                     <constraint firstItem="0VL-t6-fhY" firstAttribute="leading" secondItem="7Tl-Yl-KiJ" secondAttribute="leading" constant="3" id="xuD-y4-riT"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="일치하는 회원 정보가 없습니다." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qjn-Wj-7Rr">
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="일치하는 회원 정보가 없습니다." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qjn-Wj-7Rr">
                                 <rect key="frame" x="20" y="482" width="374" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" name="3A3A3C"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wPY-hk-vW1">
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wPY-hk-vW1">
                                 <rect key="frame" x="20" y="452" width="374" height="61"/>
                                 <string key="text">해당 이메일로
 비밀번호 변경 메일를 보냈습니다.
@@ -1865,6 +1865,34 @@
                                 <color key="textColor" name="3A3A3C"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zPx-rI-xAY">
+                                <rect key="frame" x="16" y="305" width="382" height="13"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="red_dot" translatesAutoresizingMaskIntoConstraints="NO" id="d8o-yY-Bee">
+                                        <rect key="frame" x="3" y="0.0" width="3" height="13"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="3" id="E4B-gt-Nbl"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="일치하는 회원 정보가 없습니다." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="voY-Nd-YUw">
+                                        <rect key="frame" x="9" y="0.0" width="373" height="13"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                        <color key="textColor" name="accent"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="voY-Nd-YUw" firstAttribute="leading" secondItem="d8o-yY-Bee" secondAttribute="trailing" constant="3" id="9ma-Ab-ZNO"/>
+                                    <constraint firstAttribute="trailing" secondItem="voY-Nd-YUw" secondAttribute="trailing" id="H3F-1d-HZm"/>
+                                    <constraint firstItem="d8o-yY-Bee" firstAttribute="top" secondItem="zPx-rI-xAY" secondAttribute="top" id="UWq-uS-cm4"/>
+                                    <constraint firstAttribute="height" constant="13" id="VGL-p4-yx9"/>
+                                    <constraint firstItem="d8o-yY-Bee" firstAttribute="leading" secondItem="zPx-rI-xAY" secondAttribute="leading" constant="3" id="WEF-RL-n35"/>
+                                    <constraint firstItem="voY-Nd-YUw" firstAttribute="top" secondItem="zPx-rI-xAY" secondAttribute="top" id="lQy-Mu-Wyk"/>
+                                    <constraint firstAttribute="bottom" secondItem="d8o-yY-Bee" secondAttribute="bottom" id="lnq-eo-gs0"/>
+                                    <constraint firstAttribute="bottom" secondItem="voY-Nd-YUw" secondAttribute="bottom" id="rxY-dV-x4a"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="cC1-8O-e96"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -1872,7 +1900,9 @@
                             <constraint firstItem="cC1-8O-e96" firstAttribute="trailing" secondItem="7Tl-Yl-KiJ" secondAttribute="trailing" constant="16" id="0aw-qm-tmU"/>
                             <constraint firstItem="Qjn-Wj-7Rr" firstAttribute="leading" secondItem="cC1-8O-e96" secondAttribute="leading" constant="20" id="5fG-15-l6H"/>
                             <constraint firstItem="wPY-hk-vW1" firstAttribute="top" secondItem="aay-iS-Wlj" secondAttribute="bottom" constant="50" id="5kB-6v-dL0"/>
+                            <constraint firstItem="zPx-rI-xAY" firstAttribute="top" secondItem="ydt-pX-Yrd" secondAttribute="bottom" constant="3" id="8Il-YA-MT0"/>
                             <constraint firstItem="ydt-pX-Yrd" firstAttribute="top" secondItem="lqh-tj-L0k" secondAttribute="bottom" constant="30" id="Adf-Kv-HCs"/>
+                            <constraint firstItem="zPx-rI-xAY" firstAttribute="leading" secondItem="Lbs-YB-oMv" secondAttribute="leading" constant="16" id="Ddv-1O-hd5"/>
                             <constraint firstItem="lqh-tj-L0k" firstAttribute="leading" secondItem="cC1-8O-e96" secondAttribute="leading" constant="16" id="Ea4-nN-ice"/>
                             <constraint firstItem="cC1-8O-e96" firstAttribute="trailing" secondItem="aay-iS-Wlj" secondAttribute="trailing" constant="16" id="Jo9-0h-9cy"/>
                             <constraint firstItem="ydt-pX-Yrd" firstAttribute="leading" secondItem="cC1-8O-e96" secondAttribute="leading" constant="16" id="Jv0-JZ-f9h"/>
@@ -1882,6 +1912,7 @@
                             <constraint firstItem="lqh-tj-L0k" firstAttribute="top" secondItem="cC1-8O-e96" secondAttribute="top" constant="20" id="SKp-34-LKr"/>
                             <constraint firstItem="Qjn-Wj-7Rr" firstAttribute="top" secondItem="aay-iS-Wlj" secondAttribute="bottom" constant="80" id="Umz-eD-Srt"/>
                             <constraint firstItem="cC1-8O-e96" firstAttribute="trailing" secondItem="ydt-pX-Yrd" secondAttribute="trailing" constant="16" id="Wi3-gk-9sE"/>
+                            <constraint firstItem="cC1-8O-e96" firstAttribute="trailing" secondItem="zPx-rI-xAY" secondAttribute="trailing" constant="16" id="fJy-Ft-Eeu"/>
                             <constraint firstItem="aay-iS-Wlj" firstAttribute="top" secondItem="ydt-pX-Yrd" secondAttribute="bottom" constant="50" id="grn-Ei-P21"/>
                             <constraint firstItem="7Tl-Yl-KiJ" firstAttribute="top" secondItem="lqh-tj-L0k" secondAttribute="bottom" constant="3" id="l29-vs-1GF"/>
                             <constraint firstItem="wPY-hk-vW1" firstAttribute="leading" secondItem="cC1-8O-e96" secondAttribute="leading" constant="20" id="wby-Qb-gGP"/>
@@ -1900,7 +1931,10 @@
                     <connections>
                         <outlet property="checkDotImageView" destination="0VL-t6-fhY" id="S5f-4M-vS0"/>
                         <outlet property="checkView" destination="7Tl-Yl-KiJ" id="xPg-bi-YKj"/>
+                        <outlet property="emailCheckLabel" destination="voY-Nd-YUw" id="UJg-De-lQt"/>
                         <outlet property="emailTextField" destination="Npe-1B-y6v" id="s6w-ae-HLd"/>
+                        <outlet property="emailcheckDotImageView" destination="d8o-yY-Bee" id="0bi-iL-odi"/>
+                        <outlet property="emailcheckView" destination="zPx-rI-xAY" id="vYE-wL-ugc"/>
                         <outlet property="foundLabel" destination="wPY-hk-vW1" id="ywt-wI-yj6"/>
                         <outlet property="idCheckLabel" destination="tSm-2X-yna" id="vlm-gv-5E6"/>
                         <outlet property="idTextField" destination="hvU-kR-GLR" id="oht-Ls-M4w"/>
