--- a/hollysome/Views/Commons/FaqDetailCell.xib
+++ b/hollysome/Views/Commons/FaqDetailCell.xib
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="FaqDetailCell" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="101" id="FmF-8m-Kbx" customClass="FaqDetailCell" customModule="RocateerKit" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="FaqDetailCell" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="101" id="FmF-8m-Kbx" customClass="FaqDetailCell" customModule="hollysome" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="101"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="FmF-8m-Kbx" id="Zur-mS-gm4">
@@ -18,21 +18,21 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="252" horizontalCompressionResistancePriority="749" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="639-Ir-MgW">
-                        <rect key="frame" x="47.5" y="20" width="307.5" height="61"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <rect key="frame" x="43" y="20" width="312" height="61"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <color key="textColor" name="6E7583"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="exclamationmark.bubble" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="v58-OG-9p1">
-                        <rect key="frame" x="20" y="16.5" width="22.5" height="19.5"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="faq_a" translatesAutoresizingMaskIntoConstraints="NO" id="v58-OG-9p1">
+                        <rect key="frame" x="20" y="20" width="18" height="15.5"/>
                         <color key="tintColor" name="333333"/>
                     </imageView>
                 </subviews>
-                <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="calibratedRGB"/>
+                <color key="backgroundColor" name="FAFAFC"/>
                 <constraints>
                     <constraint firstItem="v58-OG-9p1" firstAttribute="leading" secondItem="Zur-mS-gm4" secondAttribute="leading" constant="20" id="0En-Lz-nGw"/>
                     <constraint firstAttribute="trailing" secondItem="639-Ir-MgW" secondAttribute="trailing" constant="20" id="Rh6-eT-eiW"/>
-                    <constraint firstItem="v58-OG-9p1" firstAttribute="top" secondItem="Zur-mS-gm4" secondAttribute="top" constant="16" id="efi-fh-sVM"/>
+                    <constraint firstItem="v58-OG-9p1" firstAttribute="top" secondItem="Zur-mS-gm4" secondAttribute="top" constant="20" id="efi-fh-sVM"/>
                     <constraint firstItem="639-Ir-MgW" firstAttribute="top" secondItem="Zur-mS-gm4" secondAttribute="top" constant="20" id="eyJ-tc-Sxt"/>
                     <constraint firstItem="639-Ir-MgW" firstAttribute="leading" secondItem="v58-OG-9p1" secondAttribute="trailing" constant="5" id="iGU-VT-R1g"/>
                     <constraint firstAttribute="bottom" secondItem="639-Ir-MgW" secondAttribute="bottom" constant="20" id="uGr-Sj-ntv"/>
@@ -45,9 +45,15 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="exclamationmark.bubble" catalog="system" width="128" height="110"/>
+        <image name="faq_a" width="18" height="15.5"/>
         <namedColor name="333333">
             <color red="0.20000000298023224" green="0.20000000298023224" blue="0.20000000298023224" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="6E7583">
+            <color red="0.4309999942779541" green="0.45899999141693115" blue="0.51399999856948853" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="FAFAFC">
+            <color red="0.98000001907348633" green="0.98000001907348633" blue="0.98799997568130493" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
