--- a/hollysome/Views/Home/HomeScheduleCell.xib
+++ b/hollysome/Views/Home/HomeScheduleCell.xib
@@ -22,69 +22,76 @@
                         <rect key="frame" x="0.0" y="0.0" width="213" height="104"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EnU-Tl-rJu">
-                                <rect key="frame" x="16" y="16" width="181" height="17"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                <rect key="frame" x="16" y="41" width="181" height="19.333333333333329"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                 <color key="textColor" name="3A3A3C"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rTA-jx-ltl">
-                                <rect key="frame" x="16" y="37" width="181" height="14.333333333333336"/>
+                                <rect key="frame" x="35" y="20" width="162" height="14.333333333333336"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" name="A3A7B6"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W1i-vB-ZL1">
-                                <rect key="frame" x="141" y="64" width="56" height="24"/>
-                                <color key="backgroundColor" name="FFFFFF"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_time_icon" translatesAutoresizingMaskIntoConstraints="NO" id="6aX-xs-Chg">
+                                <rect key="frame" x="16" y="19" width="16" height="16"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="56" id="7az-xT-l7N"/>
-                                    <constraint firstAttribute="height" constant="24" id="MW6-FZ-3Db"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="완료">
-                                    <color key="titleColor" name="accent"/>
-                                </state>
-                                <state key="selected" title="미완료">
-                                    <color key="titleColor" name="E4E6EB"/>
-                                </state>
-                            </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hand.thumbsup.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="LS3-DL-0vp">
-                                <rect key="frame" x="71.666666666666671" y="18" width="70.000000000000014" height="68.666666666666671"/>
-                                <color key="tintColor" name="FF5F58"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="70" id="0cC-b2-Zb6"/>
-                                    <constraint firstAttribute="width" constant="70" id="55J-mC-3Pc"/>
+                                    <constraint firstAttribute="width" constant="16" id="HXR-uE-dp8"/>
+                                    <constraint firstAttribute="height" constant="16" id="Js3-bF-mB0"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="완료하기" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ejv-0m-J2W">
+                                <rect key="frame" x="13.999999999999996" y="69" width="48.666666666666657" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" name="A3A7B6"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" name="FAFAFC"/>
                         <constraints>
-                            <constraint firstItem="rTA-jx-ltl" firstAttribute="top" secondItem="EnU-Tl-rJu" secondAttribute="bottom" constant="4" id="Bzd-ZS-K0i"/>
-                            <constraint firstItem="LS3-DL-0vp" firstAttribute="centerX" secondItem="HeB-Hp-yC7" secondAttribute="centerX" id="HQP-zS-Nla"/>
-                            <constraint firstItem="EnU-Tl-rJu" firstAttribute="top" secondItem="HeB-Hp-yC7" secondAttribute="top" constant="16" id="HwE-JN-ptS"/>
+                            <constraint firstItem="rTA-jx-ltl" firstAttribute="centerY" secondItem="6aX-xs-Chg" secondAttribute="centerY" id="16K-J7-0H6"/>
+                            <constraint firstAttribute="bottom" secondItem="Ejv-0m-J2W" secondAttribute="bottom" constant="18" id="4WN-ec-DzW"/>
+                            <constraint firstItem="rTA-jx-ltl" firstAttribute="leading" secondItem="6aX-xs-Chg" secondAttribute="trailing" constant="3" id="6dd-uF-hcT"/>
+                            <constraint firstItem="EnU-Tl-rJu" firstAttribute="top" secondItem="6aX-xs-Chg" secondAttribute="bottom" constant="6" id="Dj7-Pr-8O7"/>
+                            <constraint firstItem="Ejv-0m-J2W" firstAttribute="leading" secondItem="HeB-Hp-yC7" secondAttribute="leading" constant="14" id="JCp-yP-3KO"/>
                             <constraint firstAttribute="trailing" secondItem="EnU-Tl-rJu" secondAttribute="trailing" constant="16" id="KpW-6L-6Se"/>
-                            <constraint firstItem="LS3-DL-0vp" firstAttribute="centerY" secondItem="HeB-Hp-yC7" secondAttribute="centerY" id="NRs-16-IeE"/>
+                            <constraint firstItem="6aX-xs-Chg" firstAttribute="leading" secondItem="HeB-Hp-yC7" secondAttribute="leading" constant="16" id="Q7r-k1-eYI"/>
                             <constraint firstAttribute="trailing" secondItem="rTA-jx-ltl" secondAttribute="trailing" constant="16" id="TCP-kx-JQZ"/>
                             <constraint firstItem="EnU-Tl-rJu" firstAttribute="leading" secondItem="HeB-Hp-yC7" secondAttribute="leading" constant="16" id="iEg-Pg-Ufp"/>
-                            <constraint firstAttribute="bottom" secondItem="W1i-vB-ZL1" secondAttribute="bottom" constant="16" id="o52-T5-B6I"/>
-                            <constraint firstAttribute="trailing" secondItem="W1i-vB-ZL1" secondAttribute="trailing" constant="16" id="ztp-HQ-l9K"/>
-                            <constraint firstItem="rTA-jx-ltl" firstAttribute="leading" secondItem="HeB-Hp-yC7" secondAttribute="leading" constant="16" id="zxM-aO-f1R"/>
+                            <constraint firstItem="6aX-xs-Chg" firstAttribute="top" secondItem="HeB-Hp-yC7" secondAttribute="top" constant="19" id="nxw-3C-ddA"/>
+                        </constraints>
+                    </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qek-nK-6xZ">
+                        <rect key="frame" x="0.0" y="0.0" width="213" height="104"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="stemp" translatesAutoresizingMaskIntoConstraints="NO" id="LS3-DL-0vp">
+                                <rect key="frame" x="44.666666666666657" y="-10" width="124" height="124"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.55000000000000004" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="LS3-DL-0vp" firstAttribute="centerX" secondItem="Qek-nK-6xZ" secondAttribute="centerX" id="eyK-6N-bu0"/>
+                            <constraint firstItem="LS3-DL-0vp" firstAttribute="centerY" secondItem="Qek-nK-6xZ" secondAttribute="centerY" id="lHG-PZ-xA5"/>
                         </constraints>
                     </view>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="Qek-nK-6xZ" firstAttribute="top" secondItem="Jm0-Jr-GA6" secondAttribute="top" id="5KK-jG-m3o"/>
                     <constraint firstItem="HeB-Hp-yC7" firstAttribute="top" secondItem="Jm0-Jr-GA6" secondAttribute="top" id="Bod-Ru-9At"/>
+                    <constraint firstAttribute="bottom" secondItem="Qek-nK-6xZ" secondAttribute="bottom" id="End-K8-jUm"/>
                     <constraint firstAttribute="bottom" secondItem="HeB-Hp-yC7" secondAttribute="bottom" id="FnT-BR-mu0"/>
+                    <constraint firstAttribute="trailing" secondItem="Qek-nK-6xZ" secondAttribute="trailing" id="jrb-SI-CIz"/>
                     <constraint firstItem="HeB-Hp-yC7" firstAttribute="leading" secondItem="Jm0-Jr-GA6" secondAttribute="leading" id="lNW-pp-fci"/>
+                    <constraint firstItem="Qek-nK-6xZ" firstAttribute="leading" secondItem="Jm0-Jr-GA6" secondAttribute="leading" id="v5I-Pq-oqV"/>
                     <constraint firstAttribute="trailing" secondItem="HeB-Hp-yC7" secondAttribute="trailing" id="wWv-IY-Wpd"/>
                 </constraints>
             </collectionViewCellContentView>
             <size key="customSize" width="213" height="104"/>
             <connections>
                 <outlet property="checkImageView" destination="LS3-DL-0vp" id="sre-Da-HRD"/>
+                <outlet property="completeLabel" destination="Ejv-0m-J2W" id="Nc6-HU-anN"/>
+                <outlet property="completeView" destination="Qek-nK-6xZ" id="kka-OB-Akr"/>
                 <outlet property="roundView" destination="HeB-Hp-yC7" id="wee-vk-gFX"/>
-                <outlet property="stateButton" destination="W1i-vB-ZL1" id="e2m-iK-8zl"/>
                 <outlet property="timeLabel" destination="rTA-jx-ltl" id="Krs-NM-kx3"/>
                 <outlet property="titleLabel" destination="EnU-Tl-rJu" id="Blv-C1-nmB"/>
             </connections>
@@ -92,27 +99,16 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="hand.thumbsup.circle" catalog="system" width="128" height="123"/>
+        <image name="home_time_icon" width="16" height="16"/>
+        <image name="stemp" width="124" height="124"/>
         <namedColor name="3A3A3C">
             <color red="0.22699999809265137" green="0.22699999809265137" blue="0.23499999940395355" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="A3A7B6">
             <color red="0.63899999856948853" green="0.65499997138977051" blue="0.71399998664855957" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="E4E6EB">
-            <color red="0.89399999380111694" green="0.90200001001358032" blue="0.92199999094009399" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="FAFAFC">
             <color red="0.98000001907348633" green="0.98000001907348633" blue="0.98799997568130493" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="FF5F58">
-            <color red="1" green="0.72500002384185791" blue="0.6589999794960022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="FFFFFF">
-            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="accent">
-            <color red="1" green="0.46299999952316284" blue="0.3449999988079071" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
