--- a/hollysome/Resources/Login.storyboard
+++ b/hollysome/Resources/Login.storyboard
@@ -50,28 +50,6 @@
                                 <color key="textColor" name="6E7583"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oJ0-Tv-ETE">
-                                <rect key="frame" x="107" y="699.5" width="56" height="56"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" image="login_naver">
-                                    <color key="titleColor" name="FFFFFF"/>
-                                </state>
-                                <connections>
-                                    <action selector="naverLoginButtonTouchedWithSender:" destination="Rq4-h3-dFX" eventType="touchUpInside" id="myG-rw-a1H"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eZ3-GB-H7V">
-                                <rect key="frame" x="179" y="699.5" width="56" height="56"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" image="login_kakao">
-                                    <color key="titleColor" name="000000"/>
-                                </state>
-                                <connections>
-                                    <action selector="kakaoLoginButtonTouchedWithSender:" destination="Rq4-h3-dFX" eventType="touchUpInside" id="nsy-1M-7mu"/>
-                                </connections>
-                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lmT-KT-rUG">
                                 <rect key="frame" x="206.5" y="655" width="1" height="14"/>
                                 <color key="backgroundColor" name="C8CCD5"/>
@@ -132,17 +110,6 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RmT-gE-4Mh">
-                                <rect key="frame" x="251" y="699.5" width="56" height="56"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" image="login_apple">
-                                    <color key="titleColor" name="FFFFFF"/>
-                                </state>
-                                <connections>
-                                    <action selector="appleLoginButtonTouchedWithSender:" destination="Rq4-h3-dFX" eventType="touchUpInside" id="ktg-fA-Lxp"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="34Z-Qa-EwE">
                                 <rect key="frame" x="16" y="585" width="382" height="50"/>
                                 <constraints>
@@ -157,6 +124,47 @@
                                     <action selector="emailLoginButtonTouchedWithSender:" destination="Rq4-h3-dFX" eventType="touchUpInside" id="TwI-ko-oeo"/>
                                 </connections>
                             </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="zbg-Qn-ECL">
+                                <rect key="frame" x="107" y="699.5" width="200" height="56"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oJ0-Tv-ETE">
+                                        <rect key="frame" x="0.0" y="0.0" width="56" height="56"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" image="login_naver">
+                                            <color key="titleColor" name="FFFFFF"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="naverLoginButtonTouchedWithSender:" destination="Rq4-h3-dFX" eventType="touchUpInside" id="myG-rw-a1H"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eZ3-GB-H7V">
+                                        <rect key="frame" x="72" y="0.0" width="56" height="56"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" image="login_kakao">
+                                            <color key="titleColor" name="000000"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="kakaoLoginButtonTouchedWithSender:" destination="Rq4-h3-dFX" eventType="touchUpInside" id="nsy-1M-7mu"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RmT-gE-4Mh">
+                                        <rect key="frame" x="144" y="0.0" width="56" height="56"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" image="login_apple">
+                                            <color key="titleColor" name="FFFFFF"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="appleLoginButtonTouchedWithSender:" destination="Rq4-h3-dFX" eventType="touchUpInside" id="ktg-fA-Lxp"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="56" id="CMJ-N6-473"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="HPq-pA-gXq"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -167,19 +175,15 @@
                             <constraint firstItem="HPq-pA-gXq" firstAttribute="trailing" secondItem="ekQ-fX-43m" secondAttribute="trailing" constant="20" id="B1F-cj-qFk"/>
                             <constraint firstItem="9jZ-6q-VwA" firstAttribute="top" secondItem="DO2-xg-oVh" secondAttribute="bottom" id="B8W-pN-C2B"/>
                             <constraint firstItem="jkb-QD-VVd" firstAttribute="centerX" secondItem="HPq-pA-gXq" secondAttribute="centerX" id="BQT-g5-yMt"/>
-                            <constraint firstItem="RmT-gE-4Mh" firstAttribute="centerY" secondItem="eZ3-GB-H7V" secondAttribute="centerY" id="Df0-pU-n2E"/>
                             <constraint firstItem="L3B-Ug-cxG" firstAttribute="top" secondItem="HPq-pA-gXq" secondAttribute="top" id="E8k-RL-gNH"/>
                             <constraint firstItem="HPq-pA-gXq" firstAttribute="trailing" secondItem="L3B-Ug-cxG" secondAttribute="trailing" id="Ff9-X0-6C2"/>
                             <constraint firstItem="9jZ-6q-VwA" firstAttribute="height" secondItem="vRS-t1-Fci" secondAttribute="height" id="IHH-mt-uAI"/>
                             <constraint firstItem="34Z-Qa-EwE" firstAttribute="leading" secondItem="HPq-pA-gXq" secondAttribute="leading" constant="16" id="IX2-Eh-o5X"/>
                             <constraint firstItem="riO-hU-YbJ" firstAttribute="height" secondItem="DYN-jU-EQY" secondAttribute="height" id="KQA-D5-IKb"/>
-                            <constraint firstItem="eZ3-GB-H7V" firstAttribute="leading" secondItem="oJ0-Tv-ETE" secondAttribute="trailing" constant="16" id="MWW-PK-EcR"/>
                             <constraint firstItem="34Z-Qa-EwE" firstAttribute="height" secondItem="riO-hU-YbJ" secondAttribute="height" id="Mvr-W5-tX8"/>
-                            <constraint firstItem="eZ3-GB-H7V" firstAttribute="top" secondItem="xgw-7L-dbY" secondAttribute="bottom" constant="20" id="Nmr-Bn-wNi"/>
                             <constraint firstItem="lmT-KT-rUG" firstAttribute="leading" secondItem="q0P-bz-iQd" secondAttribute="trailing" id="Ryv-by-XBc"/>
                             <constraint firstItem="x9V-jN-Qa9" firstAttribute="leading" secondItem="HPq-pA-gXq" secondAttribute="leading" constant="20" id="UZj-Mh-5LO"/>
                             <constraint firstItem="HPq-pA-gXq" firstAttribute="trailing" secondItem="34Z-Qa-EwE" secondAttribute="trailing" constant="16" id="VPx-yc-JhZ"/>
-                            <constraint firstItem="eZ3-GB-H7V" firstAttribute="centerX" secondItem="HPq-pA-gXq" secondAttribute="centerX" id="Vd2-tY-nLJ"/>
                             <constraint firstItem="riO-hU-YbJ" firstAttribute="top" secondItem="DYN-jU-EQY" secondAttribute="bottom" constant="16" id="WUQ-li-F8I"/>
                             <constraint firstItem="xgw-7L-dbY" firstAttribute="centerY" secondItem="lmT-KT-rUG" secondAttribute="centerY" id="Wex-IL-uPu"/>
                             <constraint firstItem="DO2-xg-oVh" firstAttribute="centerX" secondItem="HPq-pA-gXq" secondAttribute="centerX" id="Ypf-St-c9y"/>
@@ -187,13 +191,12 @@
                             <constraint firstItem="ekQ-fX-43m" firstAttribute="leading" secondItem="HPq-pA-gXq" secondAttribute="leading" constant="20" id="aID-vI-zed"/>
                             <constraint firstItem="xgw-7L-dbY" firstAttribute="leading" secondItem="lmT-KT-rUG" secondAttribute="trailing" id="az8-0H-btU"/>
                             <constraint firstItem="DYN-jU-EQY" firstAttribute="leading" secondItem="HPq-pA-gXq" secondAttribute="leading" constant="16" id="bIs-VQ-zYr"/>
-                            <constraint firstItem="RmT-gE-4Mh" firstAttribute="leading" secondItem="eZ3-GB-H7V" secondAttribute="trailing" constant="16" id="brV-OX-Vqr"/>
                             <constraint firstItem="vRS-t1-Fci" firstAttribute="leading" secondItem="HPq-pA-gXq" secondAttribute="leading" id="dBq-U7-MiQ"/>
                             <constraint firstItem="34Z-Qa-EwE" firstAttribute="top" secondItem="riO-hU-YbJ" secondAttribute="bottom" constant="24" id="gbo-Oc-DQ0"/>
                             <constraint firstItem="DYN-jU-EQY" firstAttribute="top" secondItem="ekQ-fX-43m" secondAttribute="bottom" constant="30" id="hK4-Nk-6PM"/>
                             <constraint firstItem="9jZ-6q-VwA" firstAttribute="leading" secondItem="HPq-pA-gXq" secondAttribute="leading" id="hi6-F6-fkt"/>
                             <constraint firstItem="q0P-bz-iQd" firstAttribute="centerY" secondItem="lmT-KT-rUG" secondAttribute="centerY" id="ij5-6T-64k"/>
-                            <constraint firstItem="oJ0-Tv-ETE" firstAttribute="centerY" secondItem="eZ3-GB-H7V" secondAttribute="centerY" id="k6J-pt-WyC"/>
+                            <constraint firstItem="zbg-Qn-ECL" firstAttribute="top" secondItem="xgw-7L-dbY" secondAttribute="bottom" constant="20" id="jAc-qi-aqx"/>
                             <constraint firstItem="HPq-pA-gXq" firstAttribute="trailing" secondItem="x9V-jN-Qa9" secondAttribute="trailing" constant="20" id="kCx-cY-RxD"/>
                             <constraint firstItem="riO-hU-YbJ" firstAttribute="leading" secondItem="UpB-1f-KcV" secondAttribute="leading" constant="16" id="lzC-Ac-mho"/>
                             <constraint firstItem="jkb-QD-VVd" firstAttribute="top" secondItem="L3B-Ug-cxG" secondAttribute="bottom" id="oLC-Et-4Ru"/>
@@ -207,6 +210,7 @@
                             <constraint firstItem="L3B-Ug-cxG" firstAttribute="height" secondItem="UpB-1f-KcV" secondAttribute="height" multiplier="0.05" id="x54-eg-6iX"/>
                             <constraint firstItem="HPq-pA-gXq" firstAttribute="trailing" secondItem="vRS-t1-Fci" secondAttribute="trailing" id="xa6-Vn-PLi"/>
                             <constraint firstAttribute="trailing" secondItem="9jZ-6q-VwA" secondAttribute="trailing" id="y7M-fL-gbF"/>
+                            <constraint firstItem="zbg-Qn-ECL" firstAttribute="centerX" secondItem="HPq-pA-gXq" secondAttribute="centerX" id="zKL-XB-PHR"/>
                         </constraints>
                     </view>
                     <connections>
@@ -1982,7 +1986,7 @@
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="accent">
-            <color red="1" green="0.37299999594688416" blue="0.3449999988079071" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.46299999952316284" blue="0.3449999988079071" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="point">
             <color red="1" green="0.76700001955032349" blue="0.33399999141693115" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
