--- a/hollysome/Views/AccountBook/AccountBookEmptyCell.xib
+++ b/hollysome/Views/AccountBook/AccountBookEmptyCell.xib
@@ -10,38 +10,54 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="AccountBookEmptyCell" rowHeight="93" id="efi-NX-qqd" customClass="AccountBookEmptyCell" customModule="hollysome" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="393" height="93"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="AccountBookEmptyCell" rowHeight="255" id="efi-NX-qqd" customClass="AccountBookEmptyCell" customModule="hollysome" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="393" height="255"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="efi-NX-qqd" id="jIZ-BG-odR">
-                <rect key="frame" x="0.0" y="0.0" width="393" height="93"/>
+                <rect key="frame" x="0.0" y="0.0" width="393" height="255"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PbK-xs-uv5">
-                        <rect key="frame" x="16" y="22" width="361" height="49"/>
+                        <rect key="frame" x="16" y="95" width="361" height="138"/>
                         <string key="text">이번 달 가계부 내역이 없습니다.
 지금 바로 작성해보세요!</string>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                         <color key="textColor" name="C8CCD5"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bKj-h5-MH8">
+                        <rect key="frame" x="16" y="20" width="361" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="25" id="OnJ-mB-Vov"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                        <color key="textColor" name="3A3A3C"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <color key="backgroundColor" name="FFFFFF"/>
                 <constraints>
+                    <constraint firstItem="bKj-h5-MH8" firstAttribute="top" secondItem="jIZ-BG-odR" secondAttribute="top" constant="20" id="Abg-qx-COJ"/>
                     <constraint firstItem="PbK-xs-uv5" firstAttribute="leading" secondItem="jIZ-BG-odR" secondAttribute="leading" constant="16" id="FoD-Yu-dGj"/>
                     <constraint firstAttribute="trailing" secondItem="PbK-xs-uv5" secondAttribute="trailing" constant="16" id="Oe6-nd-Afr"/>
-                    <constraint firstItem="PbK-xs-uv5" firstAttribute="top" secondItem="jIZ-BG-odR" secondAttribute="top" constant="22" id="jEK-a8-Wfq"/>
+                    <constraint firstAttribute="trailing" secondItem="bKj-h5-MH8" secondAttribute="trailing" constant="16" id="RYb-w9-0a5"/>
+                    <constraint firstItem="PbK-xs-uv5" firstAttribute="top" secondItem="bKj-h5-MH8" secondAttribute="bottom" constant="50" id="WWI-QS-dSA"/>
+                    <constraint firstItem="bKj-h5-MH8" firstAttribute="leading" secondItem="jIZ-BG-odR" secondAttribute="leading" constant="16" id="fEp-RS-TxZ"/>
                     <constraint firstAttribute="bottom" secondItem="PbK-xs-uv5" secondAttribute="bottom" constant="22" id="tW8-qb-ovf"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" name="FFFFFF"/>
             <connections>
                 <outlet property="emptyLabel" destination="PbK-xs-uv5" id="ERi-h9-tsa"/>
+                <outlet property="titleLabel" destination="bKj-h5-MH8" id="KYr-oW-k3j"/>
             </connections>
-            <point key="canvasLocation" x="139.69465648854961" y="36.971830985915496"/>
+            <point key="canvasLocation" x="145.80152671755724" y="111.61971830985917"/>
         </tableViewCell>
     </objects>
     <resources>
+        <namedColor name="3A3A3C">
+            <color red="0.22699999809265137" green="0.22699999809265137" blue="0.23499999940395355" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="C8CCD5">
             <color red="0.7839999794960022" green="0.80000001192092896" blue="0.83499997854232788" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
